# distributed-url-shortener

./: README.md  docker-compose.yml
scripts/: init_db.sql
service_analytics/: Dockerfile  requirements.txt
service_analytics/worker_app/: __init__.py  kafka_consumer.py
service_kgs/: Dockerfile  requirements.txt
service_kgs/kgs_app/: core_logic.py
service_redirector/: Cargo.toml  Dockerfile
service_redirector/src/: main.rs  state.rs
service_shortener/: Dockerfile  requirements.txt
service_shortener/shortener_app/: api.py
