[package]
name = "service_redirector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.3",features = ["full"]}
axum = "0.8.7"
dotenvy = "0.15"
deadpool-redis = {version = "0.22",features = ["serde"]}
deadpool-postgres = {version = "0.14.1"}
tokio-postgres = "0.7"
http = "1.1"
serde = {version = "1.0",features = ["derive"]}
rdkafka = {version = "0.38",features = ["tokio"]}
once_cell = "1.19"